--- a/templates/details/main.html
+++ b/templates/details/main.html
@@ -77,7 +77,7 @@
     <h3>Status</h3>
 
     <dt><span class="tip" data-content="XXX" data-original-title="YYY">Uptime</span></dt>
-    <dd><%= relay.get('uptime') %></dd>
+    <dd><%= relay.get('uptime_hrfull') %></dd>
 
     <dt><span class="tip" data-content="XXX" data-original-title="YYY">Running</span></dt>
     <dd><%= relay.get('running') %></dd>
