Fix bugs suggested by @kloesing

--- a/templates/about.html
+++ b/templates/about.html
@@ -32,7 +32,7 @@ The historical data of the bridges bandwith usage is available in graph form.
 </div>
 
 <div class="page-header">
-<h1>Tecnologies</h1>
+<h1>Technologies</h1>
 </div>
 <div class="row">
 <div class="span4">
@@ -42,6 +42,8 @@ This application is built in a way that all the logic is delegated to the client
 This means that the amount of requests made to the server can be minimized and that
 this application can potentially run by being loaded locally. The server is only
 interrogated for JSON objects that do not manipulate the DOM of the page.
+The protocol used for retrieving relay data in Onionoo you can check it out
+<a href="http://kloesing.github.com/Onionoo">here</a>.
 </p>
 </div>
 
@@ -59,6 +61,7 @@ dependencies. <a href="http://jquery.com/">jQuery</a> and <a href="http://docume
 <h2>Open Source</h2>
 <p>
 All the code for this website is Open Source. It actually couldn't be otherwise since it is all being loaded into the browser ;). But it's also released under BSD 2 clause license.
+The sources can be found on <a href="https://github.com/hellais/TorStatus">github</a>
 </p>
 </div>
 </div>
