Proper error handling and fix code repository in about page
* Add error handling for NoScript (fix #5316)
* Point to gitweb.tpo instead of github

--- a/templates/about.html
+++ b/templates/about.html
@@ -61,7 +61,7 @@ dependencies. <a href="http://jquery.com/">jQuery</a> and <a href="http://docume
 <h2>Open Source</h2>
 <p>
 All the code for this website is Open Source. It actually couldn't be otherwise since it is all being loaded into the browser ;). But it's also released under BSD 2 clause license.
-The sources can be found on <a href="https://github.com/hellais/TorStatus">github</a>
+The sources can be found on <a href="https://gitweb.torproject.org/atlas.git">https://gitweb.torproject.org/atlas.git</a>
 </p>
 </div>
 </div>
