--- a/templates/search/do.html
+++ b/templates/search/do.html
@@ -17,6 +17,10 @@
         <strong>Backend error!</strong><p>The backend server replied with an error
 to your query. This probably means that you did not properly format your query. Or that you just are trying to fuzz my web app hoping to pwn me. Good luck! ;)</p>
     </div>
+    <% } else if (error == 3) {%>
+    <div class="alert alert-error">
+        <strong>JavaScript Error!</strong><p>There is a problem with your javascript environment, you may have noscript enabled on the remote onionoo backend. Try temporarily allowing noscript to connect to the backend IP address. If the problem persits consult <a href="https://trac.torproject.org/">the bugtracker.</a></p>
+    </div>
     <% } %>
 <% } else { %>
 <table cellpadding="0" cellspacing="0" border="0" class="table table-bordered table-striped" id="torstatus_results">
