s/Tor Status/Atlas/

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 <header id="about">
-<h1>Tor Status</h1>
+<h1>Atlas</h1>
 <p class="lead">
-Tor Status is a web application to discover Tor relays and bridges. It provides useful information on how relays are configured along with graphics about their past.
+Atlas is a web application to discover Tor relays and bridges. It provides useful information on how relays are configured along with graphics about their past.
 </p>
 </header>
 
@@ -50,7 +50,7 @@ The protocol used for retrieving relay data in Onionoo you can check it out
 <div class="span4">
 <h2>Libraries</h2>
 <p>
-Tor Status uses <a href="http://documentcloud.github.com/backbone/">Backbone.js</a> as an MV* framework, with <a href="http://requirejs.org/">require.js</a> for AMD loading of
+Atlas uses <a href="http://documentcloud.github.com/backbone/">Backbone.js</a> as an MV* framework, with <a href="http://requirejs.org/">require.js</a> for AMD loading of
 dependencies. <a href="http://jquery.com/">jQuery</a> and <a href="http://documentcloud.github.com/underscore/">Underscore.js</a> as JS utility libraries.
 <a href="http://datatables.net/">Datatables</a> for visualizing data in tabular form with custom filtering. <a href="http://code.google.com/p/flot/">Flot</a> for making pretty charts.
 <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> as a CSS framework.
