--- a/templates/search/main.html
+++ b/templates/search/main.html
@@ -1,7 +1,7 @@
      <div class="container">
         <div class="splash">
-            <h1>Tor Status Beta is out!</h1>
-            <p>Tor Status is a web application to learn about currently running Tor relays and bridges. Enter your search in the above box to get started.</p>
+            <h1>Welcome to Atlas.</h1>
+            <p>Atlas is a web application to learn about currently running Tor relays and bridges. Enter your search in the above box to get started.</p>
             <p class="learn-more"><a class="btn btn-info btn-large" href="#about">Learn more »</a></p>
         </div>
     </div>
