--- a/templates/details/main.html
+++ b/templates/details/main.html
@@ -97,6 +97,7 @@
             </div>
             <div class="caption">
               <h5>3 Days graph</h5>
+              <a id="save_days" href="">Save Graph</a>
             </div>
           </div>
         </li>
@@ -108,6 +109,7 @@
             </div>
             <div class="caption">
               <h5>1 Week graph</h5>
+              <a id="save_week" href="">Save Graph</a>
             </div>
           </div>
         </li>
@@ -123,6 +125,7 @@
             </div>
             <div class="caption">
               <h5>1 Month graph</h5>
+              <a id="save_month" href="">Save Graph</a>
             </div>
           </div>
         </li>
@@ -134,6 +137,7 @@
             </div>
             <div class="caption">
               <h5>3 Months graph</h5>
+              <a id="save_months" href="">Save Graph</a>
             </div>
           </div>
         </li>
@@ -149,6 +153,7 @@
             </div>
             <div class="caption">
               <h5>1 Year graph</h5>
+              <a id="save_year" href="">Save Graph</a>
             </div>
           </div>
         </li>
@@ -160,6 +165,7 @@
 
            <div class="caption">
               <h5>5 Years graph</h5>
+              <a id="save_years" href="">Save Graph</a>
             </div>
           </div>
         </li>
