Update Onionoo URL.

--- a/templates/about.html
+++ b/templates/about.html
@@ -43,7 +43,7 @@ This means that the amount of requests made to the server can be minimized and t
 this application can potentially run by being loaded locally. The server is only
 interrogated for JSON objects that do not manipulate the DOM of the page.
 The protocol used for retrieving relay data in Onionoo you can check it out
-<a href="http://kloesing.github.com/Onionoo">here</a>.
+<a href="https://onionoo.torproject.org/">here</a>.
 </p>
 </div>
 
