Update links to Onionoo

--- a/templates/about.html
+++ b/templates/about.html
@@ -42,8 +42,9 @@ This application is built in a way that all the logic is delegated to the client
 This means that the amount of requests made to the server can be minimized and that
 this application can potentially run by being loaded locally. The server is only
 interrogated for JSON objects that do not manipulate the DOM of the page.
-The protocol used for retrieving relay data in Onionoo you can check it out
-<a href="https://onionoo.torproject.org/">here</a>.
+The protocol used for retrieving relay data is called Onionoo you can learn
+<a href="https://www.torproject.org/projects/onionoo.html">more about Onionoo here</a>
+and see <a href="https://onionoo.torproject.org/">the protocol details here</a>.
 </p>
 </div>
 
